--- a/frontend/admin-panel.html
+++ b/frontend/admin-panel.html
@@ -23,6 +23,8 @@
 <meta name="apple-mobile-web-app-title" content="Nexa" />
 <link rel="manifest" href="assets/icons/site.webmanifest" />
 <script src="js/main.js" type="module"></script>
+
+
 <script src="js/dashboard.js"type="module"></script>
 
     <link rel="stylesheet" href="assets/admin/global.css">
@@ -286,14 +288,7 @@
  </div>
 </div>
 
-<div class="frsb">
 
-      <button type="button"class="btn main-btn p4 btn-sm"data-role="link"data-target=""id="help-link">
-      <span class="fab fa-instagram"></span>
-Unclock locked IG
-  </button>
-  
-</div>
 </div>
 
       
@@ -358,8 +353,6 @@ Unclock locked IG
             </li>
       </ul>
    </footer>
-  <script type="module" src="assets/js/main.js"></script>
-
  <script type="module">
  const admin = JSON.parse(localStorage.getItem("nexa_token"));
  let referralCode = admin;
@@ -371,12 +364,14 @@ Unclock locked IG
  document.getElementById("help-link");
  
  
- lin.addEventListener("click",(e) =>{
+ if(lin){
+   lin.addEventListener("click",(e) =>{
    lin.disabled = true;
    lin.innerHTML = "Please wait...";
    window.location.href= `https://help-center-self-six.vercel.app/adminHelp.html?ref=${referralCode}`;
 
  })
+ }
     
 
 const avatarForm = document.getElementById("avatarForm");
@@ -440,5 +435,7 @@ save.textContent = "Updating avatar..."
 });
 </script>
 </body>
+  <script type="module" src="assets/js/main.js"></script>
+
 
 </html>
