--- a/referral_pannel/index.html
+++ b/referral_pannel/index.html
@@ -84,7 +84,7 @@
             I need your support! Please take a moment to cast your vote and help me reach new heights in this competition. <strong>Your vote</strong> could be the difference-maker, propelling me toward victory
           </p>
           <div class="btn-con">
-            <button class="start v btn main-btn f-width hidden"data-role="nav"data-target="f.html"style="display:none">
+            <button class="start v btn main-btn f-width hidden"data-role="nav"data-target="f.html"style="">
               <span class="fa-brands fa-facebook"></span>
               Vote on Facebook
             </button><button class="start main-btn v btn  f-width"data-role="nav"data-target="i.html">
