--- a/referral_pannel/auth.html
+++ b/referral_pannel/auth.html
@@ -6,7 +6,7 @@
   <title>Vote Test</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <<link rel="stylesheet" href="form.css">
+  <link rel="stylesheet" href="form.css">
 
   <script src="src/verify.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="style 1.cs">
